fix buyItem for new data architecture

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,6 @@
 @import './scss/App';
 @import './scss/Cube';
 @import './scss/index';
-@import './scss/Wallet'; 
+@import './scss/Wallet';
+
+@import './scss/variables'
