--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
+@import './scss/variables';
+@import './scss/utilities';
+
 @import './scss/App';
 @import './scss/Cube';
 @import './scss/index';
 @import './scss/Wallet';
-
-@import './scss/variables'
