--- a/src/scss/Cube.scss
+++ b/src/scss/Cube.scss
@@ -13,6 +13,7 @@
     position: relative;
     margin: 50px auto;
     width: 200px;
+    height: 200px;
     transform-style: preserve-3d;
     animation: spin 150s infinite linear;
 
