--- a/public/style.css
+++ b/public/style.css
@@ -88,6 +88,12 @@
     .cube-viewer .cube:hover .right {
       background: radial-gradient(rgba(219, 218, 182, 0.3) 60%, rgba(0, 0, 0, 0.3)); }
 
+.click-value {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  animation: rise 4s ease-out; }
+
 @keyframes spin {
   0% {
     transform: rotateY(0) rotateX(-15deg); }
@@ -95,6 +101,15 @@
     transform: rotateY(1800deg) rotateX(15deg); }
   100% {
     transform: rotateY(3600deg) rotateX(-15deg); } }
+
+@keyframes rise {
+  0% {
+    transform: translateY(0); }
+  70% {
+    opacity: 0;
+    transform: translateY(-90px); }
+  100% {
+    opacity: 0; } }
 
 body {
   margin: 0;
