--- a/src/scss/Cube.scss
+++ b/src/scss/Cube.scss
@@ -75,8 +75,21 @@
 
 }
 
+.click-value {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  animation: rise 4s ease-out;
+}
+
 @keyframes spin {
   0% { transform: rotateY(0) rotateX(-15deg); }
   50% {transform: rotateY(1800deg) rotateX(15deg); }
   100% {transform: rotateY(3600deg) rotateX(-15deg); }
+}
+
+@keyframes rise {
+  0% { transform: translateY(0); }
+  70% { opacity: 0; transform: translateY(-90px);}
+  100% { opacity: 0;}
 }
