--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,6 @@
 @import './scss/utilities';
 
 @import './scss/App';
-@import './scss/Cube';
+@import './scss/Box';
 @import './scss/index';
 @import './scss/Wallet';
