--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,9 @@
 @import './scss/variables';
 @import './scss/utilities';
+@import './scss/animation';
 
 @import './scss/App';
 @import './scss/Box';
 @import './scss/index';
 @import './scss/Wallet';
+@import './scss/Inventory';
