--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,3 +10,8 @@ $color-left: rgba(182,183,219,$color-opacity);
 $color-right: rgba(219,218,182,$color-opacity);
 
 $edge-shadow: rgba(0,0,0,.3);
+
+$icon-1: rgba(0,160,176,1);
+$icon-2: rgba(106,74,60,1);
+$icon-3: rgba(204,51,63,1);
+$icon-4: rgba(235,104,65,1);
