--- a/src/scss/Inventory.scss
+++ b/src/scss/Inventory.scss
@@ -4,11 +4,14 @@
   left: 50%;
   right: 50%;
   transform: translateX(-50%);
-  background-color: lightgray;
   width: 20rem;
   padding: 1rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 3px;;
+  border: 1px solid lightgray;
 
-  div:not(:last-child) {
+  .inventory-row-container:not(:last-child) {
     margin-bottom: 1rem;
   }
 
@@ -16,7 +19,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #eee;
 
     .inventory-icon {
       svg {
